src/tests/snapshots/amber__tests__translating__sub_num_shorthand.ab__ksh.snap
---
source: src/tests/translating.rs
expression: ast
---
Block(
    BlockFragment {
        statements: [
            VarStmt(
                VarStmtFragment {
                    name: "x",
                    global_id: Some(
                        0,
                    ),
                    index: None,
                    kind: Num,
                    is_ephemeral: false,
                    is_ref: false,
                    is_local: false,
                    is_array_ref: false,
                    is_declared: true,
                    optimize_unused: true,
                    operator: "=",
                    value: Raw(
                        RawFragment {
                            value: "20.5",
                            with_condition: false,
                        },
                    ),
                },
            ),
            VarStmt(
                VarStmtFragment {
                    name: "x",
                    global_id: Some(
                        0,
                    ),
                    index: None,
                    kind: Num,
                    is_ephemeral: false,
                    is_ref: false,
                    is_local: false,
                    is_array_ref: false,
                    is_declared: true,
                    optimize_unused: true,
                    operator: "=",
                    value: Subprocess(
                        SubprocessFragment {
                            fragment: List(
                                ListFragment {
                                    values: [
                                        Raw(
                                            RawFragment {
                                                value: "awk 'BEGIN { print ARGV[1]",
                                                with_condition: false,
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "-",
                                                with_condition: false,
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "ARGV[2] }'",
                                                with_condition: false,
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: " ",
                                                with_condition: false,
                                            },
                                        ),
                                        VarExpr(
                                            VarExprFragment {
                                                name: "x",
                                                global_id: Some(
                                                    0,
                                                ),
                                                kind: Num,
                                                is_ref: false,
                                                is_length: false,
                                                is_quoted: true,
                                                is_array_to_string: false,
                                                is_array_ref: false,
                                                is_declared: true,
                                                is_math_var: false,
                                                render_type: BashValue,
                                                index: None,
                                                index_pos: None,
                                                with_condition: false,
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: " ",
                                                with_condition: false,
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "8.2",
                                                with_condition: false,
                                            },
                                        ),
                                    ],
                                    separator: Empty,
                                },
                            ),
                            quoted: false,
                            with_condition: false,
                        },
                    ),
                },
            ),
            VarStmt(
                VarStmtFragment {
                    name: "y",
                    global_id: Some(
                        1,
                    ),
                    index: None,
                    kind: Num,
                    is_ephemeral: false,
                    is_ref: false,
                    is_local: false,
                    is_array_ref: false,
                    is_declared: true,
                    optimize_unused: true,
                    operator: "=",
                    value: Raw(
                        RawFragment {
                            value: "50.8",
                            with_condition: false,
                        },
                    ),
                },
            ),
            VarStmt(
                VarStmtFragment {
                    name: "y",
                    global_id: Some(
                        1,
                    ),
                    index: None,
                    kind: Num,
                    is_ephemeral: false,
                    is_ref: false,
                    is_local: false,
                    is_array_ref: false,
                    is_declared: true,
                    optimize_unused: true,
                    operator: "=",
                    value: Subprocess(
                        SubprocessFragment {
                            fragment: List(
                                ListFragment {
                                    values: [
                                        Raw(
                                            RawFragment {
                                                value: "awk 'BEGIN { print ARGV[1]",
                                                with_condition: false,
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "-",
                                                with_condition: false,
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "ARGV[2] }'",
                                                with_condition: false,
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: " ",
                                                with_condition: false,
                                            },
                                        ),
                                        VarExpr(
                                            VarExprFragment {
                                                name: "y",
                                                global_id: Some(
                                                    1,
                                                ),
                                                kind: Num,
                                                is_ref: false,
                                                is_length: false,
                                                is_quoted: true,
                                                is_array_to_string: false,
                                                is_array_ref: false,
                                                is_declared: true,
                                                is_math_var: false,
                                                render_type: BashValue,
                                                index: None,
                                                index_pos: None,
                                                with_condition: false,
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: " ",
                                                with_condition: false,
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "25.3",
                                                with_condition: false,
                                            },
                                        ),
                                    ],
                                    separator: Empty,
                                },
                            ),
                            quoted: false,
                            with_condition: false,
                        },
                    ),
                },
            ),
        ],
        increase_indent: true,
        needs_noop: false,
        is_conditional: false,
    },
)
